<?xml version="1.0"?>
<package format="2">
  <name>ros_to_rosbridge</name>
  <version>0.0.0</version>
  <description>The ros_to_rosbridge package</description>
  <maintainer email="koichi@todo.todo">koichi</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rospy_message_converter</exec_depend>
  <export/>
</package>
